# reveal-deal-appeal

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.yaml  data.py  embed.py  plot.py  pyproject.toml  requirements.txt  reveal.py
src/: clf.py  config.py  config.yaml  data.py  dataset.py  plot.py  refine.py  utils.py
tests/: conftest.py
