[project]
name = "revdeal"
version = "2025.0.0"
description = "Your project description"
authors = [
    { name = "po-li-ce-ca-ru", email = "policecar@23bit.net" }
]
dependencies = []
requires-python = ">=3.11"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

